# FaceRecognize

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mobilefacenet.param
app/src/main/cpp/: face_jni.cpp  log.h  mtcnn.cpp  mtcnn.h  recognize.cpp  recognize.h  utils.cpp  utils.h
app/src/main/cpp/ncnn/: platform.h
app/src/main/cpp/ncnn/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake
app/src/main/cpp/ncnn/x86/include/ncnn/: platform.h
app/src/main/java/siren/ocean/recognize/: AppContext.java  FaceRecognize.java
app/src/main/java/siren/ocean/recognize/activity/: MainActivity.java
app/src/main/java/siren/ocean/recognize/apapter/: PhoneCamAdapter.java
app/src/main/java/siren/ocean/recognize/entity/: CameraParameter.java
app/src/main/java/siren/ocean/recognize/util/: CommonUtil.java  DialogHelper.java  FileUtils.java  ParameterControl.java  PhotoUtils.java  PreferencesUtility.java  SimilarUtil.java  SpinnerCreator.java  ThreadUtil.java
app/src/main/java/siren/ocean/recognize/widget/: CameraView.java
app/src/main/java/siren/ocean/yuv/: YuvUtil.java
app/src/main/res/drawable/: selector_camera.xml
app/src/main/res/layout/: activity_main.xml  include_bottom_sheet.xml  item_pop.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
